<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <Button
            android:id="@+id/btn_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_display" />

        <Button
            android:id="@+id/btn_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_textview" />

        <Button
            android:id="@+id/btn_build_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_build_info" />

        <Button
            android:id="@+id/btn_loop_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_loop_task" />

        <Button
            android:id="@+id/btn_loop_task2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_loop_task2" />

        <Button
            android:id="@+id/btn_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_preference" />

        <Button
            android:id="@+id/btn_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_provider" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>